# rust-libcore

./: .gitignore  Cargo.toml  README.md  build.rs
alloc/: Cargo.toml
collections/: Cargo.toml
core/: Cargo.toml
rustc_unicode/: Cargo.toml
